@@ -66,6 +66,7 @@
 * SafeCharge: Support tokens [almalee24] #4948
 * Redsys: Update to $0 verify [almalee24] #4944
 * Litle: Update stored credentials [almalee24] #4903
+* WorldPay: Accept GooglePay pan only [almalee24] #4943
 
 == Version 1.135.0 (August 24, 2023)
 * PaymentExpress: Correct endpoints [steveh] #4827
